[project]
name = "lzf-utils"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "onnx>=1.20.0",
    "onnxconverter-common>=1.16.0",
    "onnxslim>=0.1.80",
    "pyroomacoustics>=0.9.0",
    "scipy-stubs>=1.16.3.3",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
